--- a/style.css
+++ b/style.css
@@ -1,78 +1,112 @@
 * {
     margin: 0;
     font-family: Arial;
-    border:border-box;
+    border: border-box;
 }
 
-body
-{
+body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color:rgb(20, 19, 19);
+    background-color: rgb(20, 19, 19);
 }
 
+.main p {
 
+    font-size: 14px;
+    font-family: 'Times New Roman', Times, serif;
+    cursor: pointer;
+    color: white;
+}
 
 .amain {
     border: 2px solid white;
-    height:50%;
-    width:50%;
     background-color: rgb(45, 45, 45);
     border-radius: 20px;
-    display:flex;
-    flex-wrap:wrap;    
+    height: 100%;
+    width: 280px;
+
+
+
 
 }
 
 
-#cal
-{
-      border-radius:50%;
-      border:2px solid white;
-      width:50px;
-      cursor: pointer;
-      height:50px;
-      margin:10px;
+.amain a {
+
+    cursor: pointer;
+    text-decoration: none;
 }
 
-/* .main {
+#cal {
+    border-radius: 50%;
+    border: 2px solid white;
+    width: 45px;
+    cursor: pointer;
+    height: 45px;
+    margin: 5px;
+    margin-top: 15px;
 
+}
+
+.main {
+
+    display: flex;
     justify-content: center;
     text-align: center;
-} */
-@media(max-width:768px){
-
-
-body
-{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color:rgb(20, 19, 19);
-}
-
-.amain {
-    border: 2px solid white;
-    height:50%;
-    width:50%;
-    background-color: rgb(45, 45, 45);
-    border-radius: 20px;
-    display:flex;
-    flex-wrap:wrap;    
+    flex-wrap: wrap;
+    /* padding:2px; */
 
 }
 
 
-#cal
-{
-      border-radius:50%;
-      border:2px solid white;
-      width:50px;
-      cursor: pointer;
-      height:50px;
-      margin:10px;
-}
+@media(max-width:768px) {
 
+    * {
+        margin: 0;
+        font-family: Arial;
+        border: border-box;
+    }
+
+    body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: rgb(45, 45, 45);
+    }
+
+    .amain {
+
+        height: 100%;
+        width: 100%;
+        background-color: rgb(45, 45, 45);
+        border-radius: 20px;
+        border: none;
+        /* border: 2px solid white; */
+
+
+    }
+
+
+    #cal {
+        border-radius: 50%;
+        border: 2px solid white;
+        width: 70px;
+        cursor: pointer;
+        height: 70px;
+        margin: 9.5px;
+        scroll-behavior: smooth;
+
+    }
+
+    .main {
+
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        flex-wrap: wrap;
+        padding: 10px;
+
+    }
 
 }
